Add Metamask interaction

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DAT</title>
+    <title>Pegasus Republic</title>
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/polyfills.ts"></script>
+
     <script type="module" src="/src/EntryPoint.tsx"></script>
   </body>
 </html>
